Moved block mission block tracker to AuraSkills